--- a/index.html
+++ b/index.html
@@ -1,16 +1,55 @@
-<html>
-    <head>
-        <title>
-            Olá, meu nome é Ana
-        </title>
-    </head>
-    <body>
-        <h1>Jornada Dev EBAC</h1>
-        <h2>Aula 1</h2>
-    </body>
-    <ol>
-        <li>Git</li>
-        <li>Github</li>
-        <li>Html e CSS</li>
-    </ol>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ana Luiza CV</title>
+
+    <link rel="stylesheet" href="style.css">
+
+</head>
+<body>
+    <main class="resume-contents">
+        <section class="left-section">
+            <section class="left-section-content">
+                <div class="profile">
+                    <img class="profile-image"  src="img/ana_foto.jpg" alt="Profile image">
+                    <p class="name">Ana Luiza Ferreira</p>
+                    <p class="profission">Digital Marketing Specialist</p>
+                </div>
+                <div class="contact-info">
+                    <p class="left-title">Contato</p>
+                    <ul>
+                        <li><i class="fa fa-phone"></i>+55 55 55555-5555</li>
+                        <li><i class="fa fa-envelope"></i>test@gmail.com</li>
+                        <li><i class="fa fa-globe"></i>http://bit.ly/</li>
+                        <li><i class="fa fa-github"></i>miss-ana-luiza</li>
+                    </ul>
+                </div>
+                <div class="skills">
+                    <p class="left-title">Skills</p>
+                    <ul>
+                        <li><p>Social Media Strategist</p></li>    
+                        <li><p>Digital Marketing</p></li>    
+                        <li><p>Content Manager</p></li>    
+                        <li><p>Community Management</p></li>       
+                    </ul>
+                </div>
+            </section>
+        </section>    
+            <section class="right-section">
+                <div class="right-section-contents">
+                    <section class="about gap">
+                    <div class="right-title">Sobre Mim</div>
+                    <p class="about-me-contents">
+                        Hello!<br>
+                        <br>I'm a creative and well-rounded Social Media Specialist with an excellent eye for detail and strong understanding of web strategies. 
+                        <br>Known for copywriting, brand management and marketing expertise. Expert in various social media tools and team work skills.
+                    </p>
+                    </section>
+                </div>
+            </section>    
+    </main>
+</body>
 </html>
