feat-add-job-details

--- a/index.html
+++ b/index.html
@@ -49,7 +49,38 @@
                     </p>
                     </section>
                 </div>
-            </section>    
+            <section class="experience gap">
+                <div class="right-title">Experience</div>
+                <div class="experience-contents">
+                    <div class="exp-left">
+                        <p class="exp-company-name">Banco Bari</p>
+                        <p class="exp-time-period">2020-2022</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Social Media Specialist</p>
+                        <p class="exp-desc">
+                            <br>As a member of the Marketing Team, I was responsible for all the social media strategies, content and analysis data.
+                            <br>Accomplished the company goals by optimizing content and tapping into new marketing and branding opportunities. 
+                            <br>Was also responsible for the reporting tools and analytics dashboards.
+                        </p>
+                    </div>
+                    <div class="exp-left">
+                        <p class="exp-company-name">Pontomais Startup</p>
+                        <p class="exp-time-period">2019-2020</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Social Media Senior</p>
+                        <p class="exp-desc">
+                            <br>As a member of the Marketing Team, I was responsible for analysing the users engagement.
+                            <br>Support SEO and Performance strategies. Suggesting contents to reach a broader audience.
+                            <br>Increased user base by promoting brand awareness.
+                        </p>
+                    </div>
+                </div>
+                
+            </section>
+            </section>
+
     </main>
 </body>
 </html>
