--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,12 +10,13 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
+
 <body>
     <main class="resume-contents">
         <section class="left-section">
             <section class="left-section-content">
                 <div class="profile">
-                    <img class="profile-image"  src="img/ana_foto.jpg" alt="Profile image">
+                    <img class="profile-image" src="img/ana_foto.jpg" alt="Profile image">
                     <p class="name">Ana Luiza Ferreira</p>
                     <p class="profission">Digital Marketing Specialist</p>
                 </div>
@@ -30,25 +32,35 @@
                 <div class="skills">
                     <p class="left-title">Skills</p>
                     <ul>
-                        <li><p>Social Media Strategist</p></li>    
-                        <li><p>Digital Marketing</p></li>    
-                        <li><p>Content Manager</p></li>    
-                        <li><p>Community Management</p></li>       
+                        <li>
+                            <p>Social Media Strategist</p>
+                        </li>
+                        <li>
+                            <p>Digital Marketing</p>
+                        </li>
+                        <li>
+                            <p>Content Manager</p>
+                        </li>
+                        <li>
+                            <p>Community Management</p>
+                        </li>
                     </ul>
                 </div>
             </section>
-        </section>    
-            <section class="right-section">
-                <div class="right-section-contents">
-                    <section class="about gap">
+        </section>
+        <section class="right-section">
+            <div class="right-section-contents">
+                <section class="about gap">
                     <div class="right-title">Sobre Mim</div>
                     <p class="about-me-contents">
                         Hello!<br>
-                        <br>I'm a creative and well-rounded Social Media Specialist with an excellent eye for detail and strong understanding of web strategies. 
-                        <br>Known for copywriting, brand management and marketing expertise. Expert in various social media tools and team work skills.
+                        <br>I'm a creative and well-rounded Social Media Specialist with an excellent eye for detail and
+                        strong understanding of web strategies.
+                        <br>Known for copywriting, brand management and marketing expertise. Expert in various social
+                        media tools and team work skills.
                     </p>
-                    </section>
-                </div>
+                </section>
+            </div>
             <section class="experience gap">
                 <div class="right-title">Experience</div>
                 <div class="experience-contents">
@@ -59,8 +71,10 @@
                     <div class="exp-right">
                         <p class="exp-position">Social Media Specialist</p>
                         <p class="exp-desc">
-                            <br>As a member of the Marketing Team, I was responsible for all the social media strategies, content and analysis data.
-                            <br>Accomplished the company goals by optimizing content and tapping into new marketing and branding opportunities. 
+                            <br>As a member of the Marketing Team, I was responsible for all the social media
+                            strategies, content and analysis data.
+                            <br>Accomplished the company goals by optimizing content and tapping into new marketing and
+                            branding opportunities.
                             <br>Was also responsible for the reporting tools and analytics dashboards.
                         </p>
                     </div>
@@ -77,10 +91,39 @@
                         </p>
                     </div>
                 </div>
-                
             </section>
+            <section class="education gap">
+                <div class="right-title">Formação Acadêmica</div>
+                <div class="education-contents">
+                    <div class="education-left">
+                        <p class="education-school-name">Universidade do Grande ABC</p>
+                        <p class="educationp-time-period">2006-2009</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Marketing</p>
+                        <p class="education-desc">Bachelor Degree in Marketing</p>
+                    </div>
+                    <div class="education-left">
+                        <p class="education-school-name">Skill update</p>
+                        <p class="educationp-time-period">2021-2021</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">UX Writer</p>
+                        <p class="education-desc">User experience writer</p>
+                    </div>
+                    <div class="education-left">
+                        <p class="education-school-name">Skill update</p>
+                        <p class="educationp-time-period">2020-2020</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Copywriting</p>
+                        <p class="education-desc">Creative writing</p>
+                    </div>
+                </div>
             </section>
+        </section>
 
     </main>
 </body>
+
 </html>
