--- a/index.html
+++ b/index.html
@@ -121,6 +121,28 @@
                     </div>
                 </div>
             </section>
+            <section class="awards gap">
+                <div class="right-title">Certifications</div>
+                <div class="awards-contents">
+                    <div class="awards-left">
+                        <p class="awards-company-name">Udemy</p>
+                        <p class="awards-time-period">2020</p>
+                    </div>
+                    <div class="awards-right">
+                        <p class="awards-name">Project management</p>
+                        <p class="awards-desc">Learned the core of project management skills and techniques.</p>
+                    </div>
+                    <div class="awards-left">
+                        <p class="awards-company-name">Hubspot</p>
+                        <p class="awards-time-period">2018</p>
+                    </div>
+                    <div class="awards-right">
+                        <p class="awards-name">Inbound Marketing</p>
+                        <p class="awards-desc">Learned the basics of inbound marketing, shopper behavior and
+                            conversational growth.</p>
+                    </div>
+                </div>
+            </section>
         </section>
 
     </main>
