--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ana Luiza CV</title>
 
-    <link rel="stylesheet" href="style.css">
+    <!-- Google font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap"
+        rel="stylesheet">
 
+    <!-- font-awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -18,7 +28,7 @@
                 <div class="profile">
                     <img class="profile-image" src="img/ana_foto.jpg" alt="Profile image">
                     <p class="name">Ana Luiza Ferreira</p>
-                    <p class="profission">Digital Marketing Specialist</p>
+                    <p class="profession">Digital Marketing Specialist</p>
                 </div>
                 <div class="contact-info">
                     <p class="left-title">Contato</p>
@@ -60,89 +70,92 @@
                         media tools and team work skills.
                     </p>
                 </section>
+                <section class="experience gap">
+                    <div class="right-title">Experience</div>
+                    <div class="experience-contents">
+                        <div class="exp-left">
+                            <p class="exp-company-name">Banco Bari</p>
+                            <p class="exp-time-period">2020-2022</p>
+                        </div>
+                        <div class="exp-right">
+                            <p class="exp-position">Social Media Specialist</p>
+                            <p class="exp-desc">
+                                <br>As a member of the Marketing Team, I was responsible for all the social media
+                                strategies, content and analysis data.
+                                <br>Accomplished the company goals by optimizing content and tapping into new marketing
+                                and
+                                branding opportunities.
+                                <br>Was also responsible for the reporting tools and analytics dashboards.
+                            </p>
+                        </div>
+                        <div class="exp-left">
+                            <p class="exp-company-name">Pontomais Startup</p>
+                            <p class="exp-time-period">2019-2020</p>
+                        </div>
+                        <div class="exp-right">
+                            <p class="exp-position">Social Media Senior</p>
+                            <p class="exp-desc">
+                                <br>As a member of the Marketing Team, I was responsible for analysing the users
+                                engagement.
+                                <br>Support SEO and Performance strategies. Suggesting contents to reach a broader
+                                audience.
+                                <br>Increased user base by promoting brand awareness.
+                            </p>
+                        </div>
+                    </div>
+                </section>
+                <section class="education gap">
+                    <div class="right-title">Education</div>
+                    <div class="education-contents">
+                        <div class="education-left">
+                            <p class="education-school-name">Universidade do Grande ABC</p>
+                            <p class="educationp-time-period">2006-2009</p>
+                        </div>
+                        <div class="education-right">
+                            <p class="education-subject">Marketing</p>
+                            <p class="education-desc">Bachelor Degree in Marketing</p>
+                        </div>
+                        <div class="education-left">
+                            <p class="education-school-name">Skill update</p>
+                            <p class="educationp-time-period">2021-2021</p>
+                        </div>
+                        <div class="education-right">
+                            <p class="education-subject">UX Writer</p>
+                            <p class="education-desc">User experience writer</p>
+                        </div>
+                        <div class="education-left">
+                            <p class="education-school-name">Skill update</p>
+                            <p class="educationp-time-period">2020-2020</p>
+                        </div>
+                        <div class="education-right">
+                            <p class="education-subject">Copywriting</p>
+                            <p class="education-desc">Creative writing</p>
+                        </div>
+                    </div>
+                </section>
+                <section class="awards gap">
+                    <div class="right-title">Certifications</div>
+                    <div class="awards-contents">
+                        <div class="awards-left">
+                            <p class="awards-company-name">Udemy</p>
+                            <p class="awards-time-period">2020</p>
+                        </div>
+                        <div class="awards-right">
+                            <p class="awards-name">Project management</p>
+                            <p class="awards-desc">Learned the core of project management skills and techniques.</p>
+                        </div>
+                        <div class="awards-left">
+                            <p class="awards-company-name">Hubspot</p>
+                            <p class="awards-time-period">2018</p>
+                        </div>
+                        <div class="awards-right">
+                            <p class="awards-name">Inbound Marketing</p>
+                            <p class="awards-desc">Learned the basics of inbound marketing, shopper behavior and
+                                conversational growth.</p>
+                        </div>
+                    </div>
+                </section>
             </div>
-            <section class="experience gap">
-                <div class="right-title">Experience</div>
-                <div class="experience-contents">
-                    <div class="exp-left">
-                        <p class="exp-company-name">Banco Bari</p>
-                        <p class="exp-time-period">2020-2022</p>
-                    </div>
-                    <div class="exp-right">
-                        <p class="exp-position">Social Media Specialist</p>
-                        <p class="exp-desc">
-                            <br>As a member of the Marketing Team, I was responsible for all the social media
-                            strategies, content and analysis data.
-                            <br>Accomplished the company goals by optimizing content and tapping into new marketing and
-                            branding opportunities.
-                            <br>Was also responsible for the reporting tools and analytics dashboards.
-                        </p>
-                    </div>
-                    <div class="exp-left">
-                        <p class="exp-company-name">Pontomais Startup</p>
-                        <p class="exp-time-period">2019-2020</p>
-                    </div>
-                    <div class="exp-right">
-                        <p class="exp-position">Social Media Senior</p>
-                        <p class="exp-desc">
-                            <br>As a member of the Marketing Team, I was responsible for analysing the users engagement.
-                            <br>Support SEO and Performance strategies. Suggesting contents to reach a broader audience.
-                            <br>Increased user base by promoting brand awareness.
-                        </p>
-                    </div>
-                </div>
-            </section>
-            <section class="education gap">
-                <div class="right-title">Formação Acadêmica</div>
-                <div class="education-contents">
-                    <div class="education-left">
-                        <p class="education-school-name">Universidade do Grande ABC</p>
-                        <p class="educationp-time-period">2006-2009</p>
-                    </div>
-                    <div class="education-right">
-                        <p class="education-subject">Marketing</p>
-                        <p class="education-desc">Bachelor Degree in Marketing</p>
-                    </div>
-                    <div class="education-left">
-                        <p class="education-school-name">Skill update</p>
-                        <p class="educationp-time-period">2021-2021</p>
-                    </div>
-                    <div class="education-right">
-                        <p class="education-subject">UX Writer</p>
-                        <p class="education-desc">User experience writer</p>
-                    </div>
-                    <div class="education-left">
-                        <p class="education-school-name">Skill update</p>
-                        <p class="educationp-time-period">2020-2020</p>
-                    </div>
-                    <div class="education-right">
-                        <p class="education-subject">Copywriting</p>
-                        <p class="education-desc">Creative writing</p>
-                    </div>
-                </div>
-            </section>
-            <section class="awards gap">
-                <div class="right-title">Certifications</div>
-                <div class="awards-contents">
-                    <div class="awards-left">
-                        <p class="awards-company-name">Udemy</p>
-                        <p class="awards-time-period">2020</p>
-                    </div>
-                    <div class="awards-right">
-                        <p class="awards-name">Project management</p>
-                        <p class="awards-desc">Learned the core of project management skills and techniques.</p>
-                    </div>
-                    <div class="awards-left">
-                        <p class="awards-company-name">Hubspot</p>
-                        <p class="awards-time-period">2018</p>
-                    </div>
-                    <div class="awards-right">
-                        <p class="awards-name">Inbound Marketing</p>
-                        <p class="awards-desc">Learned the basics of inbound marketing, shopper behavior and
-                            conversational growth.</p>
-                    </div>
-                </div>
-            </section>
         </section>
 
     </main>
