--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <section class="right-section">
             <div class="right-section-contents">
                 <section class="about gap">
-                    <div class="right-title">Sobre Mim</div>
+                    <div class="right-title">About</div>
                     <p class="about-me-contents">
                         Hello!<br>
                         <br>I'm a creative and well-rounded Social Media Specialist with an excellent eye for detail and
