--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <p class="profession">Digital Marketing Specialist</p>
                 </div>
                 <div class="contact-info">
-                    <p class="left-title">Contato</p>
+                    <p class="left-title">Contact</p>
                     <ul>
                         <li><i class="fa fa-phone"></i>+55 55 55555-5555</li>
                         <li><i class="fa fa-envelope"></i>test@gmail.com</li>
@@ -61,7 +61,7 @@
         <section class="right-section">
             <div class="right-section-contents">
                 <section class="about gap">
-                    <div class="right-title">Sobre Mim</div>
+                    <div class="right-title">About</div>
                     <p class="about-me-contents">
                         Hello!<br>
                         <br>I'm a creative and well-rounded Social Media Specialist with an excellent eye for detail and
